# woogawooga_project

./: .gitignore  GEMINI.md  README.md  anlysys.md  main.py  pyproject.toml
datas/금감원_보이스피싱 체험관_그놈 목소리_수사기관 사칭형/: 172번.txt
dataset/: 2만자.txt  4FF_.csv  augmented_data.csv  cy_backt.csv  preprocessed_normal_calls_metadata.json
dataset/phishing_keyword_pipeline/: XGB_보류구간_성능비교.csv  X_train.csv  X_train_tfidf.npz  cy_logistic_v3.pkl  model_xgboost_v1.pkl  phish_dialogue.csv  risk_dict.json  top_keywords_log.json  y_train.csv  과잉경고_일반.csv  놓친_피싱.csv  보류구간_성능비교.csv
dataset_create/: Chaeyeon_1.ipynb  Jinjoo_1.ipynb  Jinjoo_KorCCVi_separate.ipynb  Jinjoo_VITO_STT_test.ipynb  Jinjoo_Whisper_test.ipynb  Woojae_1.ipynb  Woojae_TTS.ipynb  Woojae_normal.py  Woojae_normal2.py  Woojae_normal3.py  Youngjae_1.ipynb  Youngjae_1_gpt_prompt.ipynb  Youngjae_1_pandas.ipynb  Youngjae_1_vito.ipynb  Youngjae_1_whisperx.ipynb
dataset_create/Chaeyeon/: 2차전처리.ipynb  Chaeyeon_1.ipynb  EDA_phishing1.ipynb  VITOAPI.ipynb  cycsv1.py  cycsv2.py  cycsvpt.ipynb  cycsvpt_type.ipynb  key_ratio.ipynb  nyp_text.ipynb  vp_text.ipynb  증강.ipynb  증강데이터합치기.ipynb  진짜 증강.ipynb  키위TF0716.ipynb  키위TF0716_0330.ipynb  키위tfidf.ipynb  키위보이스피싱키워드.ipynb
dataset_create/Jinjoo/: Jinjoo_KorCCVi_separate.ipynb  Jinjoo_VITO_STT_test.ipynb  Jinjoo_VITO_STT_transformation.ipynb  Jinjoo_Whisper_test.ipynb  Jinjoo_google-stt_test.ipynb  Jinjoo_kiwi.ipynb  Jinjoo_statistics.ipynb  Jinjoo_추가EDA.ipynb
dataset_create/Woojae/: 1차 모델 테스트.ipynb  1차 모델 학습.ipynb  1차_데이터셋정제(기각).ipynb  2차_데이터셋정제.ipynb  TextToCsv.ipynb  데이터증강.ipynb  (+12 more)
(+5 files in other folders)
