[project]
name = "woogawooga-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.29.5",
    "jupyterlab>=4.4.4",
    "koreanize-matplotlib>=0.1.1",
    "matplotlib>=3.10.3",
    "notebook>=7.4.3",
    "numpy>=2.3.1",
    "pandas>=2.3.0",
    "scikit-learn>=1.7.0",
    "scipy>=1.16.0",
    "seaborn>=0.13.2",
]
