[project]
name = "woogawooga-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipykernel>=6.29.5",
    "jpype1>=1.5.2",
    "jupyterlab>=4.4.4",
    "kiwipiepy>=0.21.0",
    "konlpy>=0.6.0",
    "koreanize-matplotlib>=0.1.1",
    "langchain>=0.3.26",
    "langchain-openai>=0.3.27",
    "langchain-pinecone>=0.2.8",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.3",
    "nltk>=3.9.1",
    "notebook>=7.4.4",
    "numpy>=2.2.6",
    "openai-whisper",
    "opencv-contrib-python>=4.11.0.86",
    "pandas>=2.3.0",
    "pinecone-client>=6.0.0",
    "pyannote-audio",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
    "scikit-learn>=1.7.0",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "selenium>=4.34.0",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
    "webdriver-manager>=4.0.2",
    "whisperx>=3.4.2",
    "wordcloud>=1.9.4",
    "xgboost>=3.0.2",
]
